[project]
name = "django-single-session"
version = "0.0.1"
license = { file = "LICENSE" }
authors = [{name = "Willem Van Onsem", email = "hapythexeu+gh@gmail.com"}]
description = 'A Django app to enforce users to work only on one browser/device.'
requires-python = '>=3.8'
dependencies = [
	'django >= 3.0.0'
]

[build-system]
requires = ['setuptools>=64', 'wheel', 'setuptools_scm>=8.0']

# [tool.setuptools_scm]
# version_file = "django-single-session/_version.py"

# By default, include-package-data is true in pyproject.toml
# include_package_data = true

# No clue what this was doing
# packages = find:
# [tool.setuptools.packages.find]
# where = []

